--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
-async-trait = "0.1.88"
 axum = "0.8.4"
-axum-test = "17.3.0"
 base64 = "0.22.1"
 chrono = "0.4.41"
 reqwest = "0.12.20"
@@ -15,5 +13,5 @@ serde = "1.0.219"
 serde_json = "1.0.140"
 thirtyfour = "0.35.0"
 tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
-tokio-socks = "0.5.2"
+transparent = "0.4.1"
 ua_generator = "0.5.16"
