Add data directory to ignores and improve server startup logic
- Ignore the data directory in .gitignore and .dockerignore - Mount data
volume in docker-compose for persistent storage - Add signal handling
for graceful shutdown - Refactor main.rs for clearer startup and
shutdown flow - Enable tokio signal feature in Cargo.toml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,5 +23,7 @@ services:
       - PROXY_PORT=8081 # Replace with your proxy port
       - PROXY_USERNAME=username
       - PROXY_PASSWORD=password
+    volumes:
+      - ./data:/data # For cookies and other data
     ports:
       - "8191:8191"
