--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ reqwest = "0.12.20"
 serde = "1.0.219"
 serde_json = "1.0.140"
 thirtyfour = "0.35.0"
-tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
+tokio = { version = "1.45.1", features = ["rt-multi-thread", "signal"] }
 transparent = "0.4.1"
 ua_generator = "0.5.16"
