--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ anyhow = "1.0.98"
 axum = "0.8.4"
 base64 = "0.22.1"
 chrono = "0.4.41"
+env_logger = "0.11.8"
+log = "0.4.27"
 reqwest = "0.12.20"
 serde = "1.0.219"
 serde_json = "1.0.140"
