--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ thirtyfour = "0.36.1"
 tokio = { version = "1.47.0", features = ["rt-multi-thread", "signal"] }
 transparent = "0.4.2"
 ua_generator = "0.5.20"
+url = "2.5.2"
