--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,16 +19,16 @@ services:
       - proxy
     environment:
       - SCRAPPEY_API_KEY=apikey # Your Scrappey API key (Required)
-      - HOST=0.0.0.0 # Listen on all interfaces (Optional)
-      - PORT=8191 # Flaresolverr port (Optional)
-      - DATA_PATH=/data/persistent.json # Path to store cookies and other data (Optional)
-      - CAPTURE_FAILURE_SCREENSHOTS=true # Capture screenshots on failure (Optional)
-      - SCREENSHOT_DIR=/data/screenshots # Directory to store screenshots (Optional)
-      - MAX_FAILURE_SCREENSHOTS=10 # Maximum number of failure screenshots to keep (Optional)
-      - PROXY_HOST=proxy-public # Publically accessible proxy hostname (Required)
+      # - HOST=0.0.0.0 # Listen on all interfaces (Default: 0.0.0.0)
+      # - PORT=8191 # Flaresolverr port (Default: 8191)
+      # - DATA_PATH=/data/persistent.json # Path to store cookies and other data (Default: /data/persistent.json)
+      # - CAPTURE_FAILURE_SCREENSHOTS=true # Capture screenshots on failure (Default: true)
+      # - SCREENSHOT_DIR=/data/screenshots # Directory to store screenshots (Default: /data/screenshots)
+      # - MAX_FAILURE_SCREENSHOTS=10 # Maximum number of failure screenshots to keep (Default: 10)
+      - PROXY_HOST=proxy # Proxy hostname accessible from container (Required - use service name for docker network)
       - PROXY_PORT=8081 # Port of the proxy (Required)
-      - PROXY_USERNAME=username # Proxy authentication username (Optional)
-      - PROXY_PASSWORD=password # Proxy authentication password (Optional)
+      - PROXY_USERNAME=username # Proxy authentication username (Optional - comment out if proxy doesn't need auth)
+      - PROXY_PASSWORD=password # Proxy authentication password (Optional - comment out if proxy doesn't need auth)
     volumes:
       - ./data:/data # For cookies and other data
     ports:
